20000425-07:30 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/harbour.c
     * Replaced sequential calls to hb_compGenPCode3() + hb_compGenPCode3() with 1 call to new hb_compGenPCode4()

   * source/compiler/hbpcode.c
     + Added hb_compGenPCode4( BYTE, BYTE, BYTE, BYTE )

   * include/hbcomp.h
     + Added hb_compGenPCode4( BYTE, BYTE, BYTE, BYTE )

   * source/vm/macro.c
     + Added hb_compGenPCode4( BYTE, BYTE, BYTE, BYTE, HB_MACRO_DECL )

20000425-15:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/hbpcode.c
	*fixed length of HB_P_PUSHDOUBLE pcode

20000425-12:40 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.h
    *source/compiler/harbour.c
    *source/compiler/harbour.l
    *source/compiler/harbour.y
    *source/compiler/hbgenerr.c
    *source/pp/ppcore.c
	* fixed STATIC var[ <value> ] declaration
	* fixed DO &(<name>) WITH ... syntax
	* fixed reporting of line numbers in errors/warnings messages
	NOTE: fix in ppcore.c needs Alexander to review it - anyway
	empty lines cannot be buffered by a preprocessor (see
	hb_pp_nEmptyStrings)

    *source/rtl/gtstd/gtstd.c
	* removed atexit() call when HB_OS_UNIX is defined

    *source/vm/hvm.c
	* <windows.h> can be included only if HB_OS_WIN_32 is defined


20000425-11:36 GMT+1 Antonio Linares <alinares@fivetech.com>
   + source/vm/startup.asm
       Harbour startup for Win32 when not using any C compiler startup

   + source/vm/borsym.asm
       Borland _INIT_ segment bounds when not using Borland startup

   +- source/vm/borinit.c
      (added and removed, as it has to be placed inside hvm.c)

   * makefile.bc updated
      + startup.asm
      + borsym.asm

   * source/vm/hvm.c
     + static hb_vmProcessBorlandInitSegment() added
       process Borland _INIT_ segment (if linked) functions

20000424-11:42 GMT-8 Brian Hays <bhays@abacuslaw.com>
   * doc/en/datetime.txt
   * doc/en/dbstrux.txt
   * doc/en/dir.txt
   * doc/en/hvm.txt
      % minor grammatical touch-ups
